# crane_x7_description

./: .ci.rosinstall  CMakeLists.txt  LICENSE  README.en.md  README.md  package.xml
.github/workflows/: industrial_ci.yml
config/: dummy_controllers.yaml
crane_x7_description/: robot_description_loader.py
launch/: display.launch.py  display.rviz
test/: test_robot_description_loader.py
urdf/: crane_x7.gazebo.xacro  crane_x7.gazebo_ros2_control.xacro  crane_x7.ros2_control.xacro  crane_x7.urdf.xacro  crane_x7.xacro  crane_x7_arm.xacro  crane_x7_d435.xacro  crane_x7_mounting_plate.xacro  crane_x7_rt_logos.xacro  crane_x7_wide_two_finger_gripper.xacro
