<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crane_x7_description</name>
  <version>3.0.0</version>
  <description>The CRANE-X7 description package</description>
  <maintainer email="shop@rt-net.jp">RT Corporation</maintainer>
  <license>NON-COMMERCIAL LICENSE AGREEMENT</license>

  <author email="s.aoki@rt-net.jp">ShotaAk</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ign_ros2_control</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>launch</depend>
  <depend>robot_state_publisher</depend>
  <depend>realsense2_description</depend>
  <depend>rviz2</depend>
  <depend>xacro</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>